--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ff7cdca8">
@@ -12,7 +13,7 @@
         android:paddingBottom="35dp" />
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/noteList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/btmLayout"
@@ -20,7 +21,9 @@
         android:background="#fffdffc3"
         android:divider="#ffffcf78"
         android:dividerHeight="1sp"
-        android:footerDividersEnabled="true" />
+        android:footerDividersEnabled="true"
+        tools:listitem="@android:layout/simple_list_item_2"
+        android:choiceMode="singleChoice" />
 
     <LinearLayout
         android:id="@+id/btmLayout"
@@ -32,11 +35,11 @@
         android:layout_marginBottom="3dp"
         android:layout_marginTop="10dp">
 
+
         <Button
             android:id="@+id/addnotebutton"
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/create_note" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
