--- a/app/src/main/res/layout/activity_list_main.xml
+++ b/app/src/main/res/layout/activity_list_main.xml
@@ -8,27 +8,23 @@
     android:dividerHeight="@dimen/activity_horizontal_margin"
     tools:context=".MainActivity">
 
-
-    <Button
+    <TextView
+        android:id="@+id/addSomething"
+        android:text="To add new category press the plus button"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="#ffafbcff"
-        android:text="NOTES"
-        android:id="@+id/note_button"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:textSize="48dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+    </TextView>
+
+    <ListView
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/categoryListView"
+        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:background="#ffafbcff"
-        android:text="LISTS"
-        android:id="@+id/list_button"
-        android:layout_marginTop="43dp"
-        android:layout_below="@+id/note_button"
-        android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/note_button"
-        android:textSize="48dp" />
 </RelativeLayout>
