--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:onClick="okClicked"
-        android:text="Create New Category"
+        android:text="Add"
         android:textColor="@android:color/white" />
 
 </LinearLayout>
